--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'icomoon';
+    src: url("../../user/fonts/icomoon/icomoon.eot?srf3rx");
+    src: url("../../user/fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../../user/fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../../user/fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../../user/fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     font-family: Georgia, serif;
     font-weight: 40px;
@@ -89,27 +97,6 @@ p {
 ::selection {
     color: #fff;
     background: #ea272d;
-}
-
-#pagination {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-}
-
-#pagination button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#pagination button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
 }
 
 #moviesContainer {
