[FEAT] tombol prev dan next sudah benar

--- a/static/main/css/button.css
+++ b/static/main/css/button.css
@@ -148,14 +148,11 @@
     border-radius: 60% 60% 0 0;
 }
 
-.btn__bg:disabled {
-    height: 100%;
-    width: 100%;
-    transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+.btn:disabled {
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+.btn:disabled .btn__bg {
     background-color: #ccc;
-    border-radius: 20px;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
