--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -66,7 +66,7 @@
                         <span class="btn__text-in">Prev</span>
                     </button>
         
-                    <span id="currentPage" style="margin: 0 20px; font-size: 1.6rem; color: white;">Page 1</span>
+                    <span id="currentPage" style="margin: 10px 28px 30px 28px; font-size: 1.6rem; color: white;">Page 1</span>
         
                     <button class="btn" id="nextBtn" onclick="next()" disabled>
                         <div class="btn__bg">
