--- a/main/templates/detail_movie.html
+++ b/main/templates/detail_movie.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="{% static 'user/css/flexslider.css' %}">
         <link rel="stylesheet" href="{% static 'detail/css/detail.css' %}">
         <!-- Navbar style  -->
-        <link rel="stylesheet" href="{% static 'main/css/navbar.css' %}">
+        <link rel="stylesheet" href="{% static 'detail/css/navbard.css' %}">
     </head>
     
     <body>
