--- a/main/templates/detail_movie.html
+++ b/main/templates/detail_movie.html
@@ -70,7 +70,12 @@
                         <p><strong>Starring:</strong></p>
                         <ul class="movie__actors list--inline">
                             {% for star in movie.stars %}
-                            <li>
+                            <li class="movie__actor">
+                                {% if star.2 %}
+                                    <div class="movie__actor-photo">
+                                        <img src="{{ star.2 }}" alt="{{ star.0 }}">
+                                    </div>
+                                {% endif %}
                                 {% if star.1 %}
                                     <a href="{{ star.1 }}" target="_blank" class="text-primary">{{ star.0 }}</a>
                                 {% else %}
