--- a/static/detail/css/actor.css
+++ b/static/detail/css/actor.css
@@ -31,7 +31,7 @@
 
 .movie__actor a {
   text-decoration: none;
-  color: #00f;
+  color: crimson;
   font-weight: bold;
   font-size: 14px;
 }
@@ -69,7 +69,7 @@
 .movie__director a,
 .movie__distributor a {
     text-decoration: none;
-    color: #00f;
+    color: crimson;
     font-weight: bold;
     font-size: 14px;
     text-align: left; 
