--- a/main/templates/detail_movie.html
+++ b/main/templates/detail_movie.html
@@ -68,53 +68,59 @@
 
                     <h3>Distributed by:</h3>
                     <div class="movie__credits">
-                        <div class="movie__distributor list--inline">
-                            {% if movie.distributor.image %}
+                        <ul class="movie__distributors list--inline">
+                            {% for distributor in movie.distributors %}
+                            <li class="movie__distributor">
                                 <div class="movie__distributor-photo">
-                                    <img src="{{ movie.distributor.image }}" alt="{{ movie.distributor.label }}">
-                                </div>
-                            {% endif %}
-                            {% if movie.distributor.uri %}
-                                <a href="{{ movie.distributor.uri }}" target="_blank" class="text-primary">{{ movie.distributor.label }}</a>
-                            {% else %}
-                                {{ movie.distributor.label }}
-                            {% endif %}
-                        </div>
-                        
-                        <h3>Directed by:</h3>
-                        <div class="movie__director list--inline">
-                            {% if movie.director.image %}
-                                <div class="movie__director-photo">
-                                    <img src="{{ movie.director.image }}" alt="{{ movie.director.label }}">
-                                </div>
-                            {% endif %}
-                            {% if movie.director.uri %}
-                                <a href="{{ movie.director.uri }}" target="_blank" class="text-primary">{{ movie.director.label }}</a>
-                            {% else %}
-                                {{ movie.director.label }}
-                            {% endif %}
-                        </div>
-                        
-                        <p><strong>Starring:</strong></p>
-                        <ul class="movie__actors list--inline">
-                            {% for star in movie.stars %}
-                            <li class="movie__actor">
-                                <div class="movie__actor-photo">
-                                    {% if star.2 %}
-                                        <img src="{{ star.2 }}" alt="{{ star.0 }}">
+                                    {% if distributor.logo %}
+                                        <img src="{{ distributor.logo }}" alt="{{ distributor.label }}">
                                     {% else %}
                                         <img src="{% static 'user/images/placeholder.jpg' %}" alt="Placeholder">
                                     {% endif %}
                                 </div>
-                                {% if star.1 %}
-                                    <a href="{{ star.1 }}" target="_blank" class="text-primary">{{ star.0 }}</a>
+                                {% if distributor.uri %}
+                                    <a href="{{ distributor.uri }}" target="_blank" class="text-primary">{{ distributor.label }}</a>
                                 {% else %}
-                                    <a class="disabled">{{ star.0 }}</a>
+                                    <span class="disabled">{{ distributor.label }}</span>
                                 {% endif %}
                             </li>
                             {% endfor %}
                         </ul>
+                    </div>                    
+                
+                    <h3>Directed by:</h3>
+                    <div class="movie__director list--inline">
+                        {% if movie.director.image %}
+                            <div class="movie__director-photo">
+                                <img src="{{ movie.director.image }}" alt="{{ movie.director.label }}">
+                            </div>
+                        {% endif %}
+                        {% if movie.director.uri %}
+                            <a href="{{ movie.director.uri }}" target="_blank" class="text-primary">{{ movie.director.label }}</a>
+                        {% else %}
+                            {{ movie.director.label }}
+                        {% endif %}
+                    </div>
 
+                    <p><strong>Starring:</strong></p>
+                    <ul class="movie__actors list--inline">
+                        {% for star in movie.stars %}
+                        <li class="movie__actor">
+                            <div class="movie__actor-photo">
+                                {% if star.2 %}
+                                    <img src="{{ star.2 }}" alt="{{ star.0 }}">
+                                {% else %}
+                                    <img src="{% static 'user/images/placeholder.jpg' %}" alt="Placeholder">
+                                {% endif %}
+                            </div>
+                            {% if star.1 %}
+                                <a href="{{ star.1 }}" target="_blank" class="text-primary">{{ star.0 }}</a>
+                            {% else %}
+                                <a class="disabled">{{ star.0 }}</a>
+                            {% endif %}
+                        </li>
+                        {% endfor %}
+                    </ul>
 
                     <p><span class="bold">Metascore:</span> {{ movie.metaScore }}</p>
                     <p><span class="bold">Running Time:</span> {{ movie.runningTime }}</p>
