--- a/main/templates/detail_movie.html
+++ b/main/templates/detail_movie.html
@@ -76,7 +76,7 @@
                             {{ movie.wikidataUri }}
                         {% endif %}
                     </p>
-                    
+
                     <h3>Distributed by:</h3>
                     <div class="movie__credits">
                         <ul class="movie__distributors list--inline">
@@ -105,11 +105,15 @@
                             <div class="movie__director-photo">
                                 <img src="{{ movie.director.image }}" alt="{{ movie.director.label }}">
                             </div>
+                        {% else %}
+                            <div class="movie__director-photo">
+                                <img src="{% static 'user/images/placeholder.jpg' %}" alt="Placeholder">
+                            </div>
                         {% endif %}
                         {% if movie.director.uri %}
                             <a href="{{ movie.director.uri }}" target="_blank" class="text-primary">{{ movie.director.label }}</a>
                         {% else %}
-                            {{ movie.director.label }}
+                            <span class="disabled">{{ movie.director.label }}</span>
                         {% endif %}
                     </div>
 
