--- a/static/detail/css/detail.css
+++ b/static/detail/css/detail.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900');
 
 body {
-    font-family: 'Lato', sans-serif;
-    font-weight: 40px;
-    font-size: 18px;
-    line-height: 1.7;
-    color: rgba(255, 255, 255, 0.3);
-    background: #000 url(../../user/images/broken_noise.png) repeat;
+  font-family: 'Lato', sans-serif;
+  font-weight: 40px;
+  font-size: 18px;
+  line-height: 1.7;
+  color: rgba(255, 255, 255, 0.3);
+  background: #000 url(../../user/images/broken_noise.png) repeat;
+}
+@media (max-width: 900px) {
+  body {
+    margin-left: 16px; 
+  }
 }
 
 h1,
