--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -3,7 +3,7 @@
 .card {
     background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
     width: 200px;
-    height: 350px;
+    height: 455px;
     border-radius: 12px;
     overflow: hidden;
     position: relative;
@@ -21,7 +21,7 @@
     flex-direction: column; 
     justify-content: center; 
     align-items: center;
-    padding: 10px 15px;
+    padding: 0px 0px 15px 0px;
     background-color: #222222;
     color: #ffffff;
     border-radius: 12px;
@@ -36,35 +36,43 @@
 
 .card img {
     width: 100%;
-    height: 60%; 
-    object-fit: contain; 
+    height: 100%; 
     border-radius: 15px 15px 0 0; 
+}
+
+.card-title-wrapper {
+    width: 100%;
+    height: 60px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center; 
+    align-items: flex-start; 
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #666 #222;
+    padding: 7% 0% 7% 0%;
+}
+
+.card-title-wrapper::-webkit-scrollbar {
+    width: 6px;
+}
+
+.card-title-wrapper::-webkit-scrollbar-thumb {
+    background: #666;
+    border-radius: 4px;
+}
+
+.card-title-wrapper::-webkit-scrollbar-track {
+    background: #222;
 }
 
 .card h3 {
     font-size: 18px;
-    margin-top: 10%;
-    margin-bottom: 15%;
     color: #fff;
-    max-height: 50px; 
-    overflow: auto; 
     text-align: center;
-    line-height: 1.2; 
-    scrollbar-width: thin; 
-    scrollbar-color: #666 #222; 
-}
-
-.card h3::-webkit-scrollbar {
-    width: 6px; 
-}
-
-.card h3::-webkit-scrollbar-thumb {
-    background: #666; 
-    border-radius: 4px;
-}
-
-.card h3::-webkit-scrollbar-track {
-    background: #222; 
+    line-height: 1.2;
+    margin: 0;
+    white-space: normal;
 }
 
 .movie-placeholder {
@@ -72,7 +80,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60%;
+    height: 100%;
     background-color: #444;
     border-radius: 12px 12px 0 0;
     color: #fff;
